Fix chanllenge spacings

--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -363,4 +363,9 @@ h2 {
     margin-bottom: 38px;
 }
 
+.section-padding {
+    padding-top: 38px;
+    padding-bottom: 38px;
+}
+
 
